--- a/Mustachio/style4.css
+++ b/Mustachio/style4.css
@@ -12,4 +12,28 @@
 {
     text-align:center;
 }
-c
+.flexbox-container
+{
+   display:flex;
+   justify-content:center;
+   align-items:column;
+   /* flex-wrap:wrap; */
+}
+.flexbox-item
+{
+    width:200px;
+    margin:10px;
+    border:3px solid #333;
+    background-color: #dfdfdf
+}
+.flexbox-item-1
+{
+  height:150px;
+}
+.flexbox-item-2
+{   
+}
+.flexbox-item-3
+{
+  
+}
